--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-#main{
+.container{
 	width:620px;
 	height:300px;
 	background-color:#d4d4d4;
       display:flex;
 border:5px solid black;
 border-radius:50px;	
-	#green{
+	.green{
 		background-color:green;
 		width:100px;
 		height:100px;
@@ -16,7 +16,7 @@ border-radius:50px;
 		
 		
 	}
-	#yellow{
+	.yellow{
 	background-color:yellow;
 		width:100px;
 		height:100px;
@@ -25,7 +25,7 @@ border-radius:50px;
 		top:100px;
 		left:210px;
 	}
-	#red{
+	.red{
 		background-color:red;
 		width:100px;
 		height:100px;
