--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,9 @@ border-radius:50px;
 		width:100px;
 		height:100px;
 		border-radius:50%;
-		position:relative;
-		top:100px;
-		left:170px;
+		display:inline-block;
+		box-sizing:border-box;
+		margin:auto;
 		
 		
 	}
@@ -21,17 +21,18 @@ border-radius:50px;
 		width:100px;
 		height:100px;
 		border-radius:50%;
-		position:relative;
-		top:100px;
-		left:210px;
+		display:inline-block;
+			box-sizing:border-box;
+		margin:auto;
 	}
 	.red{
 		background-color:red;
 		width:100px;
 		height:100px;
 		border-radius:50%;
-		position:relative;
-		top:100px;
-		left:250px;
+		display:inline-block;
+			box-sizing:border-box;
+		margin:auto;
+		
 
 	}
