--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 border:5px solid black;
 border-radius:50px;	
 	.green{
-		background-color:green;
+		background-color:#008000;
 		width:100px;
 		height:100px;
 		border-radius:50%;
@@ -17,7 +17,7 @@ border-radius:50px;
 		
 	}
 	.yellow{
-	background-color:yellow;
+	background-color:#ffff00;
 		width:100px;
 		height:100px;
 		border-radius:50%;
@@ -26,7 +26,7 @@ border-radius:50px;
 		margin:auto;
 	}
 	.red{
-		background-color:red;
+		background-color:#ff0000;
 		width:100px;
 		height:100px;
 		border-radius:50%;
